# nvidia-system-monitor-qt

./: .gitignore  CMakeLists.txt  DONATE.md  LICENSE  README.md  SCREENSHOTS.md  qnvsm.pro
.github/: FUNDING.yml
.github/workflows/: codeql.yml
package/deb/: .gitignore  README.md  build.py  build.sh  config.py  file.py  qnvsm.desktop  qnvsm.desktop.in
package/deb/qnvsm/DEBIAN/: control
package/flatpak/: .gitignore  README.md  io.github.congard.qnvsm.desktop  io.github.congard.qnvsm.metainfo.xml  io.github.congard.qnvsm.yml
package/rpm/: .gitignore  README.md  qnvsm.desktop  qnvsm.spec
src/: MainWindow.cpp  MainWindow.h  SelectColorButton.cpp  SelectColorButton.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  processes.cpp  processes.h  settings.h  utilization.cpp  utilization.h  utils.cpp  utils.h  worker.cpp  worker.h
src/core/: GPUInfo.h  InfoProvider.cpp  InfoProvider.h  NVSMIParser.cpp  NVSMIParser.h  PCHIPInterpolator.cpp  PCHIPInterpolator.h  Point.h  SettingsManager.cpp  SettingsManager.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h  WorkerThread.cpp  WorkerThread.h
src/power/: PowerInfo.h  PowerProvider.cpp  PowerProvider.h  PowerWorker.cpp  PowerWorker.h
src/processes/: ProcessInfo.cpp  ProcessInfo.h  ProcessList.cpp  ProcessList.h  ProcessesTableView.cpp  ProcessesTableView.h  ProcessesView.cpp  ProcessesView.h  ProcessesWorker.cpp  ProcessesWorker.h
src/resources/: MainWindowResources.h.in  MainWindow_about.html  MainWindow_help.html  QSplitter.qss  QSplitterResources.h.in
src/utilization/: CircleWidget.cpp  CircleWidget.h  FlowGridLayout.cpp  FlowGridLayout.h  FlowLayout.cpp  FlowLayout.h  GPUDetailsWidget.cpp  GPUDetailsWidget.h  Graph.cpp  Graph.h  Grid.h  Point.cpp  Point.h  UtilizationContainer.cpp  UtilizationContainer.h  UtilizationContainerCommon.h  UtilizationData.h  UtilizationWidget.cpp  UtilizationWidget.h  UtilizationWorker.cpp  UtilizationWorker.h
src/utilization/gpu/: GPUUtDetailsWidget.cpp  GPUUtDetailsWidget.h  GPUUtilizationContainer.cpp  GPUUtilizationContainer.h  GPUUtilizationWidget.cpp  GPUUtilizationWidget.h  GPUUtilizationWorker.cpp  GPUUtilizationWorker.h
src/utilization/memory/: GPUMemDetailsWidget.cpp  GPUMemDetailsWidget.h  MemoryData.h  MemoryUtilizationContainer.cpp  MemoryUtilizationContainer.h  MemoryUtilizationWidget.cpp  MemoryUtilizationWidget.h  MemoryUtilizationWorker.cpp  MemoryUtilizationWorker.h
